--- a/app/templates/hello.html
+++ b/app/templates/hello.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% import 'macros.html' as macros %}
-{% import 'bootstrap/wtf.html' as wtf%}
+{% import 'bootstrap/wtf.html' as wtf %}
 
 {% block title %} 
 {{ super() }}
@@ -18,15 +18,13 @@
     {% else %}
         <a href="{{ url_for('index') }}"> Ir a inicio</a>
     {% endif %}
+
     <div class="container">
-        <!-- <form action="{{ url_for('hello')}}" method="POST">
-            {{ login_form.username }}
-            {{ login_form.username.label }}
-        </form> -->
-        {{ wtf.quick_form(login_form) }}
+        <h2> Crea una nueva tarea</h2>
+        {{ wtf.quick_form(todo_form) }}
     </div>
 
-    <ul>
+    <ul class="list-group">
     {% for todo in todos %}
         {{ macros.render_todo(todo) }}
     {%  endfor %}
