--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -24,8 +24,11 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="{{ url_for('index') }}"> Home <span class="sr-only">(current)</span></a></li>
-        <li><a href="https://www.w3schools.com/html/html5_semantic_elements.asp" target="blank"> Ir a web </a></li>
+        <li><a href="https://www.w3schools.com/html/html5_semantic_elements.asp" target="blank"> Ir a web <span class="icon-bar"></span></a></li>
         <li><a href="https://www.facebook.com/jodaviro" target="blank">Facebook <span class="icon-bar"></span></a></li>
+        {% if current_user.is_authenticated %}
+          <li><a href="{{ url_for('auth.logout') }}"> Logout <span class="icon-bar"></span></a></li>
+        {% endif %}
       </ul>
      
     </div><!-- /.navbar-collapse -->
