--- a/app/templates/hello.html
+++ b/app/templates/hello.html
@@ -26,7 +26,7 @@
 
     <ul class="list-group">
     {% for todo in todos %}
-        {{ macros.render_todo(todo) }}
+        {{ macros.render_todo(todo, delete_form, update_form) }}
     {%  endfor %}
     </ul>
 
