--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -8,4 +8,4 @@
         {{ wtf.quick_form(delete_form, action=url_for('delete', todo_id=todo.id)) }}
         {{ wtf.quick_form(update_form, action=url_for('update', todo_id=todo.id, done=todo.to_dict().done)) }}
     </li>
-{% endmacro %}%
+{% endmacro %}
