--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -2,10 +2,7 @@ html * {
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
-img{
+.icon-bar{
     max-width: 45px;
 }
-.colosus{
-    padding-left: 20px;
-    color: brown;
-}
+
