--- a/app/templates/404.htm
+++ b/app/templates/404.htm
@@ -5,6 +5,6 @@
 {% endblock %}
 
 {% block content %}
-  <h3>El puto error de tu vida 404</h3>
+  <h3>Obtuviste el famoso error 404</h3>
   <p> {{ error }}</p> 
 {% endblock %}
