--- a/app/templates/hello.html
+++ b/app/templates/hello.html
@@ -14,7 +14,7 @@
     {% endif %}
 
     {% if user_ip %}
-        <h3 class="colosus" >Soy un BOEBO PELAO!!!  tu ip es {{user_ip}}</h3>
+        <h3 class="colosus" > tu ip es {{user_ip}}</h3>
     {% else %}
         <a href="{{ url_for('index') }}"> Ir a inicio</a>
     {% endif %}
