--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -17,15 +17,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-			<img src="{{ url_for('static', filename='images/sombolo.png')}}" alt="logo" >	
+			<img class="icon-bar" src="{{ url_for('static', filename='images/sombolo.png')}}" alt="logo" >	
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="{{ url_for('index') }}"> Home <span class="sr-only">(current)</span></a></li>
-        <li><a href="https://www.w3schools.com/html/html5_semantic_elements.asp" target="blank"> Ir a web <span class="icon-bar"></span></a></li>
-        <li><a href="https://www.facebook.com/jodaviro" target="blank">Facebook <span class="icon-bar"></span></a></li>
+        
         {% if current_user.is_authenticated %}
           <li><a href="{{ url_for('auth.logout') }}"> Logout <span class="icon-bar"></span></a></li>
         {% endif %}
